# obs-pco-live-timer

./: .gitignore  LINUX_SETUP.md  Makefile  README.md  TROUBLESHOOTING.md  config.example.toml  gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-with-restart.sh  run.py
src/: formatting.py  manager.py  models.py  obs_websocket.py  pco_client.py  song_blocks.py  team_members.py  timing_core.py
src/gui/: config_io.py  icons.py  main_window.py  obs_reference_panel.py  tray_app.py
tests/: test_config_io.py  test_formatting.py  test_manager.py  test_obs_websocket.py  test_pco_client.py  test_smart_distance.py  test_smart_distance_transition.py  test_song_blocks.py  test_team_members.py  test_timing_core.py
