[project]
name = "obs-pco-live-timer"
version = "1.0.0"
description = "Real-time production timer for Planning Center Online with OBS WebSocket integration"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-dateutil>=2.8.2",
    "tomli>=2.0.0",
    "obsws-python>=1.7.0",
]

[project.optional-dependencies]
gui = [
    "PyGObject>=3.42.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "types-requests>=2.28.0",
    "types-python-dateutil>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
